fix wrap width issue. Needs to always be 100%, max width limits

--- a/site/layout/_enclosure.scss
+++ b/site/layout/_enclosure.scss
@@ -1,5 +1,6 @@
 %enclosure-base {
    margin: 0 auto;
+   width: 100%;
    @extend %soft--sides;
 }
 
